--- a/android/build.gradle
+++ b/android/build.gradle
@@ -82,7 +82,7 @@ def configureReactNativePom(def pom) {
         name packageJson.title
         artifactId packageJson.name
         version = packageJson.version
-        group = "com.reactlibrary"
+        group = "com.afrihost.hms.hashms"
         description packageJson.description
         url packageJson.repository.baseUrl
 
