--- a/package.json
+++ b/package.json
@@ -15,13 +15,9 @@
   "keywords": [
     "react-native"
   ],
-  "author": {
-    "name": "Afrihost",
-    "email": "open-source@afrihost.com"
-  },
+  "author": "Afrihost <open-source@afrihost.com>",
   "license": "MIT",
   "licenseFilename": "LICENSE",
-  "readmeFilename": "README.md",
   "peerDependencies": {
     "react": "^16.8.1",
     "react-native": ">=0.60.0-rc.0 <1.0.x"
@@ -29,5 +25,9 @@
   "devDependencies": {
     "react": "^16.9.0",
     "react-native": "^0.61.5"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/afrihost/react-native-has-hms/issues"
+  },
+  "homepage": "https://github.com/afrihost/react-native-has-hms#readme"
 }
