--- a/android/build.gradle
+++ b/android/build.gradle
@@ -115,8 +115,8 @@ def configureReactNativePom(def pom) {
 
         developers {
             developer {
-                id packageJson.author.username
-                name packageJson.author.name
+                id packageJson.author
+                name packageJson.author
             }
         }
     }
