--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,8 +32,8 @@ buildscript {
         }
         dependencies {
             classpath 'com.android.tools.build:gradle:5.4.1'
-            classpath 'com.huawei.agconnect:agcp:1.0.0.300'  // HUAWEI agcp plugin
-            classpath 'com.google.gms:google-services:4.2.0'
+            classpath 'com.huawei.agconnect:agcp:1.2.0.300'  // HUAWEI agcp plugin
+            classpath 'com.google.gms:google-services:4.3.3'
         }
     }
 }
@@ -48,7 +48,7 @@ allprojects {
 
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
-//apply plugin: 'com.huawei.agconnect'
+apply plugin: 'com.huawei.agconnect'
 
 android {
     compileSdkVersion safeExtGet('compileSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
